<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.digitalcollections.commons</groupId>
  <artifactId>dc-commons</artifactId>
  <version>4.2.1</version>
  <packaging>pom</packaging>

  <modules>
    <module>dc-commons-file</module>
    <module>dc-commons-jdbi</module>
    <module>dc-commons-server</module>
    <module>dc-commons-springaop</module>
    <module>dc-commons-springboot</module>
    <module>dc-commons-springdata</module>
    <module>dc-commons-springmvc</module>
    <module>dc-commons-springsecurity</module>
    <module>dc-commons-web</module>
    <module>dc-commons-validation</module>
    <module>dc-commons-xml</module>
    <module>dc-commons-yaml</module>
  </modules>

  <name>DigitalCollections: Commons (Parent)</name>
  <description>Parent for all DigitalCollections Commons projects.</description>
  <url>https://github.com/dbmdz/digitalcollections-commons</url>

  <properties>
    <!-- Build properties -->
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source> <!-- default configuration property name used by maven compiler plugin -->
    <maven.compiler.target>11</maven.compiler.target> <!-- default configuration property name used by maven compiler plugin -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.20</version>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <showDeprecation>true</showDeprecation>
          <compilerArgument>-Xlint:unchecked</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <!-- Spring Boot configures surefire by default, but not failsafe -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.1.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <doclint>none</doclint>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <!--
          <failIfNoTests>true</failIfNoTests>
          -->
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <properties>
            <excludeTags>integration-test</excludeTags>
          </properties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.15.0</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.9</version>
        <executions>
          <execution>
            <id>pre-unit-test</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.13</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh-snapshots</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>ossrh-snapshots</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <developers>
    <developer>
      <name>Christoph Lorenz</name>
      <email>christoph.lorenz@bsb-muenchen.de</email>
      <id>clorenz</id>
    </developer>
    <developer>
      <name>Johannes Baiter</name>
      <email>johannes.baiter@bsb-muenchen.de</email>
      <id>jbaiter</id>
    </developer>
    <developer>
      <name>Marcus Bitzl</name>
      <email>marcus@bitzl.me</email>
      <id>bitzl</id>
    </developer>
    <developer>
      <name>Ralf Eichinger</name>
      <email>ralf.eichinger@gmail.com</email>
      <id>datazuul</id>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://github.com/dbmdz/digitalcollections-commons/blob/main/LICENSE.md</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.9</version>
      </plugin>
    </plugins>
  </reporting>

  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/dbmdz/digitalcollections-commons/actions</url>
  </ciManagement>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/dbmdz/digitalcollections-commons/issues</url>
  </issueManagement>

  <scm>
    <connection>https://github.com/dbmdz/digitalcollections-commons.git</connection>
    <developerConnection>git@github.com:dbmdz/digitalcollections-commons.git</developerConnection>
    <url>https://github.com/dbmdz/digitalcollections-commons</url>
  </scm>

  <profiles>
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
